src/test/deca/codegen/valid/sansObjet/AssignAndWhile.deca
// Description :
//    Boucle while simple affichant des entiers.
//
// Resultats :
//    Affiche : 01234

{
    int i = 0;
    while (i < 5) {
        print(i);
        i = i + 1;
    }
}