src/test/deca/codegen/invalid/sansObjet/overflow.deca
// Description :
//    overflow_arithmetique                                                 
//
// Resultats :
//    Erreur : overflow_arithmetique

{
    int max = 2147483647;
    print(max + 1);
}
